Fix design overflow issue.

--- a/server/fishtest/static/css/application.css
+++ b/server/fishtest/static/css/application.css
@@ -451,6 +451,14 @@ legend {
   display: none;
 }
 
+.spsa-table {
+  table-layout: fixed;
+}
+
+.spsa-table td {
+  overflow-wrap: break-word;
+}
+
 /* Header */
 header.navbar {
   background-color: var(--bs-light);
